--- a/css/style.css
+++ b/css/style.css
@@ -142,6 +142,19 @@ nav {
     }
 }
 
-
-
 /* ADICIONAR EVENTO - Inserir CSS da página de adicionar*/
+
+/* Media Query - Responsividade */
+
+@media(max-width: 700px){
+    body{
+        background-color: red;
+    }
+
+    .cards{
+        .cardItem{
+            width: 70% 
+        }
+        
+    }
+}
